
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4.2 (Development, See CVS) ----

2003-05-10, Rob Hillis
  Add ability to log when a ticket is emailed.
    - zentrack/install/UPGRADE_SEED_mssqlserver.sql 1.7
    - zentrack/install/UPGRADE_SEED_mysql.sql 1.15
    - zentrack/install/UPGRADE_SEED_oracle.sql 1.14
    - zentrack/install/UPGRADE_SEED_postgres.sql 1.13
    - zentrack/install/seed_mssqlserver.sql 1.12
    - zentrack/install/seed_mysql.sql 1.22
    - zentrack/install/seed_oracle.sql 1.19
    - zentrack/install/seed_postgres.sql 1.18
    - zentrack/www/actions/email.php 1.11

  Remove non-functional default tester/manager code.
    - zentrack/install/header.php.default 1.10
    - zentrack/includes/zenTrack.class 1.105

2003-05-09, Rob Hillis
  Fix returning of default tester
    - zentrack/includes/zenTrack.class 1.102-1.104
  Added default tester and manager for bins without these roles set.
    - zentrack/install/header.php.default 1.9
    - zentrack/includes/zenTrack.class 1.101

----- V2.4.1 (2003-05-08) ----

2003-05-07, Kato
  Added rollover effects to javascript/list pages
    - zentrack/www/javascript.js 1.6
    - zentrack/www/styles.php 1.13
    - zentrack/www/javascript.js 1.8
    - zentrack/includes/priorityColors.php 1.2
    - zentrack/includes/headerInc.php 1.30
    - zentrack/includes/templates/listTickets.php 1.16
    - zentrack/includes/templates/listTickets_workFormat.php 1.14  
  Ticket sorting enhancements
    - zentrack/includes/zenTrack.class 1.99
  Updates for release (seed files)
    - zentrack/install/UPGRADE_SEED_mssqlserver.sql 1.5
    - zentrack/install/UPGRADE_SEED_mysql.sql 1.13
    - zentrack/install/UPGRADE_SEED_oracle.sql 1.12
    - zentrack/install/UPGRADE_SEED_postgres.sql 1.12